- fixed wood material blocks cannot be harvested by antler axe
v1.0.2
- added backpack
- configurable aquaduct effect range, fill per tick and use per tick
- all blocks from wood material harvestable only with axe
- added rhino tusk and saber teeth
- added woolly rhino entity
- added saber-tooth tiger entity
- fixed TOP values after restart
v1.0.1
- added mammoth tusk item
- added Mammoth entity
- moved tools to mod group
- integrated TheOneProbe
- drying rack improved add/remove item
- fixed Aquaduct connecting vertically
v1.0.0