@@ -1,3 +1,4 @@
+- fixed missing saber-tooth loot table
 - fixed wood material blocks cannot be harvested by antler axe
 v1.0.2
 - added backpack
